@@ -43,28 +43,28 @@ namespace Amica.Models
             new ReadOnlyCollection<PaymentMethod>(
                 new List<PaymentMethod>
                 {
-                    new PaymentMethod {Name = ItalianPA.MP01, PublicAdministrationCode = "MP01" },
-                    new PaymentMethod {Name = ItalianPA.MP02, PublicAdministrationCode = "MP02" },
-                    new PaymentMethod {Name = ItalianPA.MP03, PublicAdministrationCode = "MP03" },
-                    new PaymentMethod {Name = ItalianPA.MP04, PublicAdministrationCode = "MP04" },
-                    new PaymentMethod {Name = ItalianPA.MP05, PublicAdministrationCode = "MP05" },
-                    new PaymentMethod {Name = ItalianPA.MP06, PublicAdministrationCode = "MP06" },
-                    new PaymentMethod {Name = ItalianPA.MP07, PublicAdministrationCode = "MP07" },
-                    new PaymentMethod {Name = ItalianPA.MP08, PublicAdministrationCode = "MP08" },
-                    new PaymentMethod {Name = ItalianPA.MP09, PublicAdministrationCode = "MP09" },
-                    new PaymentMethod {Name = ItalianPA.MP10, PublicAdministrationCode = "MP10" },
-                    new PaymentMethod {Name = ItalianPA.MP11, PublicAdministrationCode = "MP11" },
-                    new PaymentMethod {Name = ItalianPA.MP12, PublicAdministrationCode = "MP12", IsBankReceipt=true },
-                    new PaymentMethod {Name = ItalianPA.MP13, PublicAdministrationCode = "MP13" },
-                    new PaymentMethod {Name = ItalianPA.MP14, PublicAdministrationCode = "MP14" },
-                    new PaymentMethod {Name = ItalianPA.MP15, PublicAdministrationCode = "MP15" },
-                    new PaymentMethod {Name = ItalianPA.MP16, PublicAdministrationCode = "MP16" },
-                    new PaymentMethod {Name = ItalianPA.MP17, PublicAdministrationCode = "MP17" },
-                    new PaymentMethod {Name = ItalianPA.MP18, PublicAdministrationCode = "MP18" },
-                    new PaymentMethod {Name = ItalianPA.MP19, PublicAdministrationCode = "MP19" },
-                    new PaymentMethod {Name = ItalianPA.MP20, PublicAdministrationCode = "MP20" },
-                    new PaymentMethod {Name = ItalianPA.MP21, PublicAdministrationCode = "MP21" },
-                    new PaymentMethod {Name = ItalianPA.MP22, PublicAdministrationCode = "MP22" },
+                    new PaymentMethod {Name = ItalianPA.MP01, Code = "MP01" },
+                    new PaymentMethod {Name = ItalianPA.MP02, Code = "MP02" },
+                    new PaymentMethod {Name = ItalianPA.MP03, Code = "MP03" },
+                    new PaymentMethod {Name = ItalianPA.MP04, Code = "MP04" },
+                    new PaymentMethod {Name = ItalianPA.MP05, Code = "MP05" },
+                    new PaymentMethod {Name = ItalianPA.MP06, Code = "MP06" },
+                    new PaymentMethod {Name = ItalianPA.MP07, Code = "MP07" },
+                    new PaymentMethod {Name = ItalianPA.MP08, Code = "MP08" },
+                    new PaymentMethod {Name = ItalianPA.MP09, Code = "MP09" },
+                    new PaymentMethod {Name = ItalianPA.MP10, Code = "MP10" },
+                    new PaymentMethod {Name = ItalianPA.MP11, Code = "MP11" },
+                    new PaymentMethod {Name = ItalianPA.MP12, Code = "MP12", IsBankReceipt=true },
+                    new PaymentMethod {Name = ItalianPA.MP13, Code = "MP13" },
+                    new PaymentMethod {Name = ItalianPA.MP14, Code = "MP14" },
+                    new PaymentMethod {Name = ItalianPA.MP15, Code = "MP15" },
+                    new PaymentMethod {Name = ItalianPA.MP16, Code = "MP16" },
+                    new PaymentMethod {Name = ItalianPA.MP17, Code = "MP17" },
+                    new PaymentMethod {Name = ItalianPA.MP18, Code = "MP18" },
+                    new PaymentMethod {Name = ItalianPA.MP19, Code = "MP19" },
+                    new PaymentMethod {Name = ItalianPA.MP20, Code = "MP20" },
+                    new PaymentMethod {Name = ItalianPA.MP21, Code = "MP21" },
+                    new PaymentMethod {Name = ItalianPA.MP22, Code = "MP22" },
                 });
 
     }
