@@ -12,7 +12,7 @@ namespace Amica.Models
     {
         private string _name;
         private bool _IsBankReceipt;
-        private string _paCode;
+        private string _code;
 
         /// <summary>
         /// Gets or sets the name.
@@ -41,16 +41,16 @@ namespace Amica.Models
         }
 
         /// <summary>
-        /// Gets or sets the public administration payment method code.
+        /// Gets or sets the payment method code.
         /// </summary>
         /// <value>
-        /// The public administration payment method code.
+        /// The payment method code.
         /// </value>
-        [Display(Name = nameof(Properties.PublicAdministrationCode), ResourceType =typeof(Properties))]
-        public string PublicAdministrationCode
+        [Display(Name = nameof(Properties.Code), ResourceType =typeof(Properties))]
+        public string Code
         {
-            set { SetProperty(ref _paCode, value); }
-            get { return _paCode; }
+            set { SetProperty(ref _code, value); }
+            get { return _code; }
         }
     }
 }
