@@ -7,13 +7,15 @@ v0.0.15.9
 Released on September 18, 2018.
 
 - Switch to NetStandard 1.3.
+- Rename Contact.PublicAdministrationCode as Contact.EinvoiceId.
+- Rename PaymentMethod.PublicAdministrationCode as PaymentMethod.Code.
+- Fix MailSettings.SmtpAddress Display Name attribute.
 - Add Contact.PurchaseSettings property.
 - Add Contact.SalesSettings property.
 - Add PurchaseSettings class.
 - Add SalesSettings class.
 - Add EmailAddressAttribute to MailTemplate.FromAddressa.
 - Add EmailAddressAttribute to AddressEx.Mail and AddessEx.PecMail.
-- Fix MailSettings.SmtpAddress Display Name attribute.
 
 v0.0.15.8
 =========
